<resources>
    <string name="app_name">PicnipeAPPP</string>
    <!-- Strings related to login -->
    <string name="prompt_name">Usuario</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="title_register">¿Aún no tienes una cuenta?</string>
    <string name="title_register_link">Registrate aquí</string>
    <string name="title_sign_in_link">Volver a inicio de sesión</string>
    <string name="action_sign_in_short">Iniciar</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Nombre de usuario no valido</string>
    <string name="invalid_password">La contraseña de tener >5 caracteres</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Perfil</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_search">Buscar</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_register">Registrar</string>
    <string name="create_post">Crear Nuevo Post</string>
    <string name="select_image">Seleccionar imagen</string>
    <string name="post_content">Descripcion</string>
    <string name="post_title">Titulo</string>
    <string name="pick_image">Subir imagen</string>
    <string name="search">Buscar</string>
    <string name="page_title">Publicacion</string>
    <string name="content_description_end_icon">Buscar</string>
    <string name="add_comment">Agrega un comentario</string>
    <string name="edit_user_name">Nombre de usario</string>
    <string name="edit_description_user">Descripcion de usuario</string>
    <string name="option_close_session">Cerrar Sesion</string>
    <string name="option_edit_profile">Editar Perfil</string>
    <string name="option_download_image">Descargar Publicacion</string>
    <string name="save_edit_user">Actualizar Datos</string>

    <!-- Preference Titles -->
    <string name="messages_header">Mensajes</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- User constraints -->
    <string name="user_name">User name</string>
    <string name="user_info">INFO</string>
    <!-- Titles tabs -->
    <string name="tab_profile_upload">Mis publicaciones</string>
    <string name="tab_profile_saved">Favoritos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="tab_profile_user_upload">Publicaciones del usuario</string>

    <!--  DIALOGS  -->
    <string name="dialog_add_post">Publica una nueva imagen</string>
    <string name="ok">OK</string>
    <string name="cancel">Cerrar</string>

</resources>