<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <!--<com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameR"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="224dp"
        android:hint="@string/prompt_email"
        android:layout_marginHorizontal="8dp"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconContentDescription="@string/content_description_end_icon"
        app:endIconMode="clear_text"
        android:selectAllOnFocus="true"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordR"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:hint="@string/prompt_password"
        android:layout_marginHorizontal="8dp"
        android:imeOptions="actionDone"
        android:selectAllOnFocus="true"
        android:inputType="textPassword"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        app:startIconContentDescription="@string/content_description_end_icon"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameR"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>-->
    <EditText
        android:id="@+id/usernameR"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="224dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/border_inputs"
        android:drawablePadding="15dp"
        android:ems="10"
        android:padding="15dp"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordR"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_inputs"
        android:drawablePadding="15dp"
        android:ems="10"
        android:padding="15dp"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/black"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameR" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@null"
        android:background="@drawable/border_button"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordR"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/tvRegisterLink"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="236dp"
        android:text="@string/title_register_link"
        android:textColor="#00A3FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="236dp"
        android:text="@string/title_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/usernameR"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordR"
        app:layout_constraintStart_toStartOf="@+id/passwordR"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="110dp"
        android:layout_height="107dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>