<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileUser">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarProfileUser"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:title="@string/page_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <io.getstream.avatarview.AvatarView
                    android:id="@+id/avUserProfile"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="60dp"
                    app:avatarViewBorderColor="#00FFFFFF"
                    app:avatarViewIndicatorBorderColor="@color/white"
                    app:avatarViewIndicatorBorderSizeCriteria="13"
                    app:avatarViewIndicatorColor="#84E16A"
                    app:avatarViewIndicatorEnabled="true"
                    app:avatarViewIndicatorPosition="bottomRight"
                    app:avatarViewIndicatorSizeCriteria="9"
                    app:avatarViewInitialsTextStyle="bold"
                    app:avatarViewShape="circle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/userNameProfile"
                    android:layout_width="411dp"
                    android:layout_height="51dp"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:text="nombre usuario"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/avUserProfile" />

                <TextView
                    android:id="@+id/descriptionUserProfile"
                    android:layout_width="414dp"
                    android:layout_height="34dp"
                    android:gravity="center"
                    android:text="@string/user_info"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userNameProfile"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginVertical="15dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/tab_profile_user_upload"
                android:textColor="@color/purple_500"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewUserPostsProfile"
                android:layout_width="match_parent"
                android:layout_height="300dp" />
        </LinearLayout>



    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>